--- a/.env.example
+++ b/.env.example
@@ -7,4 +7,4 @@ NEXT_PUBLIC_SUPABASE_URL=
 NEXT_PUBLIC_SUPABASE_ANON_KEY=
 
 # USDA FoodData Central API (free nutrition data - get key at https://fdc.nal.usda.gov/api-key-signup.html)
-USDA_API_KEY=
+USDA_API_KEY=g1hWVbjfFM17i5tPq4zoiR6PBGA05Lvy5ANQVO4O
