--- a/Dockerfile.frontend
+++ b/Dockerfile.frontend
@@ -4,5 +4,8 @@ WORKDIR /app
 COPY package.json pnpm-lock.yaml ./
 RUN npm install -g pnpm && pnpm install --frozen-lockfile
 COPY . .
+RUN pnpm run build
 EXPOSE 3000
-CMD ["pnpm", "run", "dev"]
+# Required so Next.js listens on all interfaces inside the container
+ENV HOSTNAME=0.0.0.0
+CMD ["pnpm", "start"]
