--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@prisma/client": "^7.4.1",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.90.1",
     "next": "16.1.2",
+    "prisma": "^7.4.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
     "react-qr-barcode-scanner": "^2.1.23",
@@ -26,6 +28,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "cypress": "^15.11.0",
     "eslint": "^9",
     "eslint-config-next": "16.1.2",
     "jest": "^30.2.0",
