--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,3 @@
-# Use official PostgreSQL image
-version: '3.8'
 services:
   db:
     image: postgres:15
@@ -19,15 +17,8 @@ services:
       dockerfile: Dockerfile.frontend
     ports:
       - '3000:3000'
-    depends_on:
-      - db
-
-  backend:
-    build:
-      context: .
-      dockerfile: Dockerfile.backend
-    ports:
-      - '4000:4000'
+    env_file:
+      - .env
     environment:
       DATABASE_URL: postgres://nutritracker:password123@db:5432/nutritracker
     depends_on:
