--- a/package.json
+++ b/package.json
@@ -15,12 +15,16 @@
     "db:studio": "prisma studio"
   },
   "dependencies": {
+    "@apollo/client": "^4.1.6",
+    "@apollo/server": "^5.4.0",
+    "@as-integrations/next": "^4.1.0",
     "@auth/prisma-adapter": "^2.11.1",
     "@prisma/client": "^7.4.1",
     "@reduxjs/toolkit": "^2.11.2",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.90.1",
     "bcryptjs": "^3.0.3",
+    "graphql": "^16.13.0",
     "next": "16.1.2",
     "next-auth": "5.0.0-beta.30",
     "prisma": "^7.4.1",
