--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@apollo/server": "^5.4.0",
     "@as-integrations/next": "^4.1.0",
     "@auth/prisma-adapter": "^2.11.1",
+    "@prisma/adapter-pg": "^7.4.1",
     "@prisma/client": "^7.4.1",
     "@prisma/client-runtime-utils": "^7.4.1",
     "@reduxjs/toolkit": "^2.11.2",
@@ -26,6 +27,7 @@
     "graphql": "^16.13.0",
     "next": "16.1.2",
     "next-auth": "5.0.0-beta.30",
+    "pg": "^8.19.0",
     "prisma": "^7.4.1",
     "react": "19.2.3",
     "react-dom": "19.2.3",
@@ -41,6 +43,7 @@
     "@types/bcryptjs": "^3.0.0",
     "@types/jest": "^30.0.0",
     "@types/node": "^20",
+    "@types/pg": "^8.16.0",
     "@types/react": "^19",
     "@types/react-dom": "^19",
     "cypress": "^15.11.0",
