feat: Cypress E2E test suite (auth, profile-setup, food-search, dashboard)
- cypress.config.ts: add e2e section (baseUrl, specPattern, supportFile)
- cypress/support/e2e.ts: E2E support file that imports commands
- cypress/support/commands.ts: cy.login() + cy.signupAndLogin() custom
  commands using cy.session() for cross-spec session caching
- cypress/e2e/auth.cy.ts: login form render, invalid credentials error,
  successful login redirect, signup form, duplicate-email guard,
  unauthenticated redirect
- cypress/e2e/profile-setup.cy.ts: form render, BMI calculation with
  stubbed API responses, error state on 403, full save flow
- cypress/e2e/food-search.cy.ts: search form, stubbed results list,
  food detail, add-to-log mutation, search failure error state
- cypress/e2e/dashboard.cy.ts: unauthenticated redirect, page render,
  time-view toggle, empty state, log  time-view toggle, empty state, log  time-view toggle, empty state, log  time-view toggle, empty state, log  time-view toggle, empty state, log  time-view toggle, empty state, log  time-view toggle, empty state, log  tupload screenshots

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -109,11 +109,35 @@ jobs:
           cache-from: type=gha
           cache-to: type=gha,mode=max
 
-  # ─── Job 4: Cypress Component Tests ──────────────────────────────────────────
+  # ─── Job 4: Cypress E2E Tests ────────────────────────────────────────────────
   cypress:
-    name: Cypress Component Tests
+    name: Cypress E2E Tests
     runs-on: ubuntu-latest
-    needs: test
+    needs: build
+
+    services:
+      postgres:
+        image: postgres:15
+        env:
+          POSTGRES_USER: nutritracker
+          POSTGRES_PASSWORD: password123
+          POSTGRES_DB: nutritracker
+        ports:
+          - 5432:5432
+        options: >-
+          --health-cmd pg_isready
+          --health-interval 10s
+          --health-timeout 5s
+          --health-retries 5
+
+    env:
+      DATABASE_URL: postgresql://nutritracker:password123@localhost:5432/nutritracker
+      DATABASE_URL_DIRECT: postgresql://nutritracker:password123@localhost:5432/nutritracker
+      AUTH_SECRET: ci-e2e-secret-at-least-32-chars-long
+      NEXTAUTH_URL: http://localhost:3000
+      # Stub key — real API calls are intercepted by cy.intercept()
+      RAPIDAPI_KEY: ci-stub-key
+      RAPIDAPI_HOST: nutrition-calculator.p.rapidapi.com
 
     steps:
       - name: Checkout code
@@ -136,12 +160,23 @@ jobs:
       - name: Generate Prisma client
         run: npx prisma generate
 
-      - name: Run Cypress component tests
+      - name: Run database migrations
+        run: npx prisma migrate deploy
+
+      - name: Run Cypress E2E tests
         uses: cypress-io/github-action@v6
         with:
-          component: true
           install: false
-        env:
-          DATABASE_URL: postgresql://dummy:dummy@localhost:5432/dummy
-          AUTH_SECRET: ci-placeholder-secret-32chars-min
-          NEXTAUTH_URL: http://localhost:3000
+          start: pnpm run dev
+          wait-on: "http://localhost:3000"
+          wait-on-timeout: 60
+          browser: chrome
+          config: video=false
+
+      - name: Upload Cypress screenshots on failure
+        if: failure()
+        uses: actions/upload-artifact@v4
+        with:
+          name: cypress-screenshots
+          path: cypress/screenshots/
+          if-no-files-found: ignore
