--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "lint": "next lint",
     "test": "jest",
     "test:ci": "jest --ci --coverage --passWithNoTests",
+    "cypress": "cypress open",
+    "cypress:run": "cypress run",
+    "test:e2e": "cypress run",
     "db:generate": "prisma generate",
     "db:migrate": "prisma migrate dev",
     "db:push": "prisma db push",
